2008-05-23  Maximilien Cuony
    * XpCom finished... for linux.

2008-05-22  Maximilien Cuony
    * Tests on the Xpcom
    * FS#59

2008-05-21  Achraf Cherti
	* creating generate_docs.sh, to generate documentation directory width Natural Docs
    * understanding naturaldocs and documenting constants and two function in the external API

2008-05-11  Maximilien Cuony
    * New logo

2008-05-10  Maximilien Cuony
	* Showing svn version number in options
	* Inline system almost done.
	* FS#49
	* More documentation

2008-05-09  Maximilien Cuony
	* Translating lot of strings
	* Changed to logo for inline system

2008-05-08  Maximilien Cuony
	* Inline system is now usable :)

2008-05-07  Maximilien Cuony
	* Implemented sub key for key selection (but widout the new keys' list system)
	* Add flexibility to some dialogs

2008-05-06  Maximilien Cuony
	* Reforming key lists communication system, implementing subkey system.
	* New key list implemented for options.

2008-05-05  Maximilien Cuony
	* Commiting the new kernel of FireGPG. _API is now broken, gpgauth is not tested_
	* Double-click on keys' list simulate a click on 'Ok'

2008-04-28  Maximilien Cuony
	* New inline system

2008-04-26  Maximilien Cuony
	*  FS#51

2008-04-23  Maximilien Cuony
	* Inline system almost done. Waiting for new cgpg now.

2008-04-22  Maximilien Cuony
	* More documentation
	* Begging of implemetation of the inline system.

2008-04-21  Maximilien Cuony
	* More documentation

2008-04-20  Maximilien Cuony
	* Reorganisation of cgpgaccess
	* Added coude source documentation.
	* Begging ofxpcom support and stats

2008-04-19  Achraf Cherti
	* beginning the new API (internal API can be used by non-chrome Javascript)
	* writing FireGPG.sign() function of the external API

2008-04-19  Maximilien Cuony
	* FS#18

2008-04-15  Maximilien Cuony
	* Now able to build an xpcom for windows and linux.

2008-04-12  Maximilien Cuony
	* FS#15
	* FS#14 part one.

2008-03-28  Maximilien Cuony